primitives/runtime-interface/tests/ui/no_generic_parameters.stderr
error: Generic parameters not supported.
 --> $DIR/no_generic_parameters.rs:4:12
  |
4 | trait Test<T> {
  |            ^
